--- a/src/CityImg.css
+++ b/src/CityImg.css
@@ -1,5 +1,5 @@
 .city_img_part{
-    margin-top: 133%;
+    margin-top: 265vh;
     position: absolute;
     width: 90%;
     left: 6%;
@@ -117,16 +117,9 @@
 .city_img_responsive{
     display: none;
 }
-@media (max-width:800px){
+@media (max-width:600px){
     .city_img_part{
-        top: 280%;
-        position: absolute;
-        width: 100%;
-        left: 0;
-        flex-direction: row;
-        margin: 0px 10px;
-        display: flex;
-        justify-content: center;
+        display: none;
     }
     .images_1{
         display: none;
@@ -159,18 +152,9 @@
         white-space: nowrap;
        
     }
-    /* .responsive_img_scroll::-webkit-scrollbar-track {
-        box-shadow: inset 0px 0px 6px, rgba(0,0,0,0.3);
-    
-}*/
     .responsive_img_scroll::-webkit-scrollbar {
        display: none;
     }
-     
-    /* .responsive_img_scroll::-webkit-scrollbar-thumb {
-      background-color: darkgrey;
-      outline: 0px solid slategrey;
-    } */
     .img_p1{
         display: inline-block;
     }
@@ -231,19 +215,95 @@
         font-size: 20px;
         padding: 0px;
     }
-    /* .responsive_img .img_p img{
-        margin: 10px;
-        width: 180px;
-        height: 120px;
+}
+@media (min-width:601px) and (max-width:1000px){
+    .city_img_part{
+        display: none;
+    }
+
+    .city_img_responsive{
+        position: absolute;
+        top: 250vh;
+        width: 100%;
         left: 0%;
+        margin: 0px 10px;
+        display: inline;
+        z-index: 6;
         align-items: center;
+    }
+    .city_img_responsive h3{
+        margin: 20px;
+        font-size: 20px;
         text-align: center;
     }
-    .img_p p{
+    .responsive_img_scroll{
+        top: 20px;
+        overflow-x: scroll;
+        overflow-y: hidden;
+        white-space: nowrap;
+       
+    }
+    .responsive_img_scroll::-webkit-scrollbar {
+       display: none;
+    }
+    .img_p1{
+        display: inline-block;
+    }
+    .img_p1 img{
+        margin: 10px;
+        width: 250px;
+        height: 200px;
+        border-radius: 10px;
+        left: 0;
+    }
+    .img_p1 p{
         text-align: center;
-        font-size: 15px;
-        margin-right: 120px;
-    } */
-
-
+        font-size: 20px;
+        padding: 0px;
+    }
+    .img_p2{
+        display: inline-block;
+    }
+    .img_p2 img{
+        margin: 10px;
+        width: 250px;
+        height: 200px;
+        border-radius: 10px;
+        left: 0;
+    }
+    .img_p2 p{
+        text-align: center;
+        font-size: 20px;
+        padding: 0px;
+    }
+    .img_p3{
+        display: inline-block;
+    }
+    .img_p3 img{
+        margin: 10px;
+        width: 250px;
+        height: 200px;
+        border-radius: 10px;
+        left: 0;
+    }
+    .img_p3 p{
+        text-align: center;
+        font-size: 20px;
+        padding: 0px;
+    }
+    .img_p4{
+        display: inline-block;
+    }
+    .img_p4 img{
+        margin: 10px;
+        width: 250px;
+        height: 200px;
+        border-radius: 10px;
+        left: 0;
+    }
+    .img_p4 p{
+        text-align: center;
+        font-size: 20px;
+        padding: 0px;
+    }
 }
