--- a/src/Footer.css
+++ b/src/Footer.css
@@ -92,7 +92,7 @@
     font-size: 18px;
 }  
 
-@media (max-width:700px){
+@media (max-width:600px){
     .footer {
         margin-top: 395vh;
         position: absolute;
@@ -121,10 +121,106 @@
     .icons a{
         font-size: 1.1rem;
     }
+    .icons a :hover{
+        color: #9e9e9e;
+    }
     .copyright p{
         background-color: rgba(255, 255, 255, 0.8);
         font-size: 15px;
         color: #114765;
         padding: 7px;
     } 
-}    
+}
+@media (min-width:601px) and (max-width:1000px){
+    .footer {
+        margin-top: 435vh;
+        position: absolute;
+        background-position: bottom;
+        background: linear-gradient(hsla(201, 71%, 23%, 0.8),
+      rgb(17, 71, 101, 0.8)), url("../public/images/footer-img.jpeg");
+        height: 400px;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-attachment: fixed;
+    }
+    .footerContent{
+        display: flex;
+        text-align: left;
+        left: 2%;
+    }
+    .footerContent h5{
+        display: flex;
+    }
+    .explore{
+        display: block;
+    }
+    .contact{
+        margin: 30px 10px;
+        padding-left: 0px;
+    }
+    .icons a{
+        font-size: 1.1rem;
+    }
+    .copyright p{
+        background-color: rgba(255, 255, 255, 0.8);
+        font-size: 15px;
+        color: #114765;
+        padding: 7px;
+    } 
+    .about{
+        margin: 30px 0px;
+    }
+    .about img{
+        width: 40px;
+        margin-right: 10px;
+    }
+    .about h2 strong {
+        font-size: 35px;
+    }
+    .about p{
+        margin: 30px 5px 10px 0px;
+        font-size: 13px;
+    }
+    .about h5{
+        padding-top: 30px;
+        font-size: 18px;
+    }
+    .explore{
+        margin: 30px 5px;
+        padding-left: 40px;
+    }
+    .explore h3{
+        padding-bottom: 20px;
+    }
+    .explore p{
+        padding-top: 0px;
+        font-size: 13px;
+    }
+    .contact{
+        margin-top: 40px;
+        padding-left: 20px;
+    }
+    .contact h3{
+        padding-bottom: 20px;
+    }
+    .contact-info a{
+        color: #fff;
+        text-decoration: none;
+        padding-left: 25px;
+    }
+    .contact-info a :hover{
+        text-decoration: none;
+        color: #9e9e9e;
+    }
+    .contact-info span{
+        position: absolute;
+        z-index: 4;
+        color: #fff;
+    }
+    .icons{
+        padding-top: 1rem;
+    }
+    .icons a :hover{
+        color: #9e9e9e;
+    }
+}   
