--- a/src/Home.css
+++ b/src/Home.css
@@ -83,7 +83,7 @@
     text-align: left;
     margin-left: 50px;
 }
-@media (max-width:700px) {
+@media (max-width:800px) {
     .bg_container .image {
         height : 90vh;
     }
@@ -227,7 +227,7 @@
 .searchbox a :hover{
     background-color: #002e46;
 }
-@media (max-width:700px){
+@media (max-width:760px){
     .searchbox{
         display: none;
     }
@@ -249,12 +249,33 @@
     }
 }
 
+@media (min-width:761px) and (max-width:1050px){
+    .tagline h1{
+        font-size: 50px;
+        text-align: left;
+        margin-left: 0;
+        margin-top: 20px;
+        left: 2%;
+    }
+    .searchbox{
+        top: 30%;
+        right: 1%;
+        height: 310px;
+        width: 310px;
+        background-color: rgba(254, 254, 254, 0.6);
+        position: absolute;
+        z-index: 2;
+        border-radius: 5%;
+    }
+}
+
+
 /*----ONE STEP SOLUTION PART WITH BOY ON SOFA----*/
 .one_step_solution{
     position: absolute;
     display: flex;
     z-index: 3;
-    margin-top: 110vh;
+    margin-top: 105vh;
     width: 80%;
     left: 6%;
 }
@@ -268,6 +289,8 @@
 .one_step_textpart p{
     font-size: 20px;
     margin: 30px 0;
+    margin-bottom: 40px;
+    width: 70%;
 }
 .button_1{
     background-color: #384FE9;
@@ -296,8 +319,8 @@
     color: #fff;
 }
 .sofa-boy-img img{
-    width: 90%;
-    margin: 40px 0px 40px 60px;
+    width: 100%;
+    margin: 40px 0px 40px 30px;
     animation: up-down 2s ease-in-out infinite alternate-reverse both;
 }
 @keyframes up-down {
@@ -308,8 +331,29 @@
         transform: translateY(-10px);
     }
 }
-@media (max-width:700px){
+@media (max-width:640px){
     .one_step_solution{
         display: none;
+    }
+}
+@media (min-width:641px) and (max-width:961px){
+    .one_step_solution{
+        margin-top: 100vh;
+        width: 95%;
+        left: 2%;
+    }
+    .one_step_textpart{
+        margin: 20px;
+    }
+    .one_step_textpart p{
+        font-size: 18px;
+        margin: 30px 0;
+        width: 100%;
+    }
+    .sofa-boy-img img{
+        width: 90%;
+        margin: 40px 10px 40px 20px;
+        right: 2%;
+        animation: up-down 2s ease-in-out infinite alternate-reverse both;
     }
 }
