--- a/src/Footer.css
+++ b/src/Footer.css
@@ -69,16 +69,16 @@
     z-index: 4;
     color: #fff;
 }
-.icons{
+.Footericons{
     padding-top: 1rem;
 }
 
-.icons a{
+.Footericons a{
     font-size: 1.5rem;
     margin: 0.8rem;
     color: #f4f4f4;
 }
-.icons a :hover{
+.Footericons a :hover{
     color: #9e9e9e;
 }
 .copyright{
@@ -118,10 +118,10 @@
         margin: 20px;
         padding-left: 0px;
     }
-    .icons a{
+    .Footericons a{
         font-size: 1.1rem;
     }
-    .icons a :hover{
+    .Footericons a :hover{
         color: #9e9e9e;
     }
     .copyright p{
@@ -158,7 +158,7 @@
         margin: 30px 10px;
         padding-left: 0px;
     }
-    .icons a{
+    .Footericons a{
         font-size: 1.1rem;
     }
     .copyright p{
@@ -217,10 +217,10 @@
         z-index: 4;
         color: #fff;
     }
-    .icons{
+    .Footericons{
         padding-top: 1rem;
     }
-    .icons a :hover{
+    .Footericons a:hover{
         color: #9e9e9e;
     }
 }   
