--- a/src/ThirdPage.css
+++ b/src/ThirdPage.css
@@ -18,16 +18,6 @@
     z-index: 5;
 }
 
-.logo img {
-    width: 30px;
-}
-
-.logo a {
-    margin-left: 25px;
-    text-decoration: none;
-    color: #ffff;
-}
-
 /* @media(max-width: 768px) {
     .nav-wrapper {
       width: 90%;
@@ -56,6 +46,15 @@
 .logo :hover {
     text-decoration: none;
     color: #bbbbbb;
+}
+
+.logo img {
+    width: 30px;
+}
+#whitelogo a {
+    margin-left: 25px;
+    text-decoration: none;
+    color: #ffff;
 }
 
 .Third-Navbar ul {
@@ -171,6 +170,455 @@
     }
 }
 
-.about-property{
-   margin-top: 70px;
+.about-property {
+    margin-top: 80px;
+}
+
+.img-map {
+    margin: 0px 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.property-images {
+    margin: 5px;
+    border: 1px solid #bfbfbf;
+    width: 810px;
+    height: 350px;
+    border-radius: 5px;
+}
+
+.property-map {
+    margin: 5px;
+    border: 1px solid #bfbfbf;
+    width: 510px;
+    height: 350px;
+    border-radius: 5px;
+}
+
+.prop-details {
+    margin: 10px 100px;
+    text-align: left;
+}
+
+.icons {
+    display: flex;
+    border-bottom: 1px solid #cbcbcb;
+    width: 60%
+}
+
+#icon {
+    margin: 5px 50px;
+}
+
+#icon p {
+    font-weight: 400;
+}
+
+.price p {
+    margin-left: 10px;
+}
+
+.bhk h5 {
+    margin-left: 65px;
+}
+
+.about-prop {
+    margin: 10px 0;
+    width: 60%;
+    border-bottom: 1px solid #cbcbcb;
+}
+
+.about-prop p {
+    width: 130%;
+}
+
+.prop-status {
+    margin: 15px 0;
+    width: 60%;
+    border-bottom: 1px solid #cbcbcb;
+    line-height: 1.1;
+}
+
+.three-lines {
+    display: flex;
+}
+
+#status {
+    margin: 5px 50px 0px 0px;
+}
+.layout h5 {
+    margin-left: 35px;
+}
+
+.layout-img {
+    display: flex;
+    width: 80%;
+    justify-content: center;
+}
+
+.layout-img #img {
+    width: 300px;
+    height: 200px;
+    border: 1px solid #cbcbcb;
+    -webkit-box-shadow: 10px 11px 8px -5px rgba(176, 176, 176, 0.88);
+    -moz-box-shadow: 10px 11px 8px -5px rgba(176, 176, 176, 0.88);
+    box-shadow: 10px 11px 8px -5px rgba(176, 176, 176, 0.88);
+    border-radius: 5px;
+    margin: 15px;
+}
+
+.floor-plan h5 {
+    margin: 30px 0px 0 35px;
+}
+
+.floor-img {
+    margin-left: 30px;
+    display: flex;
+    width: 80%;
+}
+
+.floor-img #img {
+    width: 300px;
+    height: 200px;
+    border: 1px solid #cbcbcb;
+    -webkit-box-shadow: 10px 11px 8px -5px rgba(176, 176, 176, 0.88);
+    -moz-box-shadow: 10px 11px 8px -5px rgba(176, 176, 176, 0.88);
+    box-shadow: 10px 11px 8px -5px rgba(176, 176, 176, 0.88);
+    border-radius: 5px;
+    margin: 15px;
+}
+
+.brochure-btn {
+    margin: 15px 40px;
+}
+
+.brochure-btn a {
+    background-color: blue;
+    text-decoration: none;
+    color: #ffff;
+    padding: 5px 15px;
+    border-radius: 5px;
+}
+
+.brochure-btn a:hover {
+    background-color: darkblue;
+}
+
+@media (max-width: 1170px){
+    .img-map {
+        display: block;
+        justify-content: center;
+    }
+    .property-images {
+        width: 100%;
+    }    
+    .property-map {
+        display: none;
+    }
+    .icons {
+        width: 100%
+    }
+    .about-prop {
+        width: 100%;
+    }    
+    .about-prop p {
+        width: 100%;
+    }    
+    .prop-status {
+        width: 100%;
+    }
+    .layout h5 {
+        margin-left: 15px;
+    }    
+    .layout-img {
+        width: 100%;
+    }
+    .floor-plan h5 {
+        margin: 30px 0px 0 15px;
+    }    
+    .floor-img {
+        width: 100%;
+    }
+    .footer {
+        height: 300px;
+    }    
+}
+
+
+
+/* ----Footer------*/
+
+.third-footer {
+    width: 100%;
+    text-align: center;
+    margin-bottom: -1rem;
+    background: linear-gradient(hsla(201, 71%, 23%, 0.8),
+            rgb(17, 71, 101, 0.8)), url("../public/images/footer-img.jpg");
+    margin-top: 5vh;
+    height: 450px;
+    background-size: 100%;
+    position: absolute;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    background-attachment: fixed;
+}
+
+.footerContent {
+    color: #f4f4f4;
+    display: flex;
+    margin-top: 30px;
+    justify-content: center;
+    text-align: left;
+}
+
+.about {
+    margin: 40px 0px;
+}
+
+.about img {
+    width: 40px;
+    margin-right: 10px;
+}
+
+.about h2 strong {
+    font-size: 35px;
+}
+
+.about p {
+    margin: 30px 10px 10px 0px;
+    font-size: 15px;
+}
+
+.about h5 {
+    padding-top: 30px;
+    font-size: 20px;
+}
+
+.explore {
+    margin: 40px 30px;
+    padding-left: 250px;
+}
+
+.explore h3 {
+    padding-bottom: 20px;
+}
+
+.explore p {
+    padding-top: 0px;
+    font-size: 15px;
+}
+
+.contact {
+    margin-top: 40px;
+    padding-left: 250px;
+}
+
+.contact h3 {
+    padding-bottom: 20px;
+}
+
+.contact-info a {
+    color: #fff;
+    text-decoration: none;
+    padding-left: 25px;
+}
+
+.contact-info a :hover {
+    text-decoration: none;
+    color: #9e9e9e;
+}
+
+.contact-info span {
+    position: absolute;
+    z-index: 4;
+    color: #fff;
+}
+
+.Footericons {
+    padding-top: 1rem;
+}
+
+.Footericons a {
+    font-size: 1.5rem;
+    margin: 0.8rem;
+    color: #f4f4f4;
+}
+
+.Footericons a :hover {
+    color: #9e9e9e;
+}
+
+.copyright {
+    clear: both;
+    color: #fff;
+    text-align: center;
+    justify-content: center;
+}
+
+.copyright p {
+    color: #fff;
+    font-size: 18px;
+}
+
+@media (max-width:600px) {
+    .third-footer {
+        margin-top: 420vh;
+        position: absolute;
+        background-position: bottom;
+        background: linear-gradient(hsla(201, 71%, 23%, 0.8),
+                rgb(17, 71, 101, 0.8)), url("../public/images/footer-img.jpg");
+        height: 455px;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-attachment: fixed;
+    }
+
+    .footerContent {
+        display: block;
+        text-align: center;
+    }
+
+    .footerContent h5 {
+        display: none;
+    }
+
+    .explore {
+        display: none;
+    }
+
+    .contact {
+        margin: 20px;
+        padding-left: 0px;
+    }
+
+    .Footericons a {
+        font-size: 1.1rem;
+    }
+
+    .Footericons a :hover {
+        color: #9e9e9e;
+    }
+
+    .copyright p {
+        background-color: rgba(255, 255, 255, 0.8);
+        font-size: 15px;
+        color: #114765;
+        padding: 7px;
+    }
+}
+
+@media (min-width:601px) and (max-width:1000px) {
+    .third-footer {
+        margin-top: 10vh;
+        position: absolute;
+        background-position: bottom;
+        background: linear-gradient(hsla(201, 71%, 23%, 0.8),
+                rgb(17, 71, 101, 0.8)), url("../public/images/footer-img.jpg");
+        height: 400px;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        background-attachment: fixed;
+    }
+
+    .footerContent {
+        display: flex;
+        text-align: left;
+        left: 2%;
+    }
+
+    .footerContent h5 {
+        display: flex;
+    }
+
+    .explore {
+        display: block;
+    }
+
+    .contact {
+        margin: 30px 10px;
+        padding-left: 0px;
+    }
+
+    .Footericons a {
+        font-size: 1.1rem;
+    }
+
+    .copyright p {
+        background-color: rgba(255, 255, 255, 0.8);
+        font-size: 15px;
+        color: #114765;
+        padding: 7px;
+    }
+
+    .about {
+        margin: 30px 0px;
+    }
+
+    .about img {
+        width: 40px;
+        margin-right: 10px;
+    }
+
+    .about h2 strong {
+        font-size: 35px;
+    }
+
+    .about p {
+        margin: 30px 5px 10px 0px;
+        font-size: 13px;
+    }
+
+    .about h5 {
+        padding-top: 30px;
+        font-size: 18px;
+    }
+
+    .explore {
+        margin: 30px 5px;
+        padding-left: 40px;
+    }
+
+    .explore h3 {
+        padding-bottom: 20px;
+    }
+
+    .explore p {
+        padding-top: 0px;
+        font-size: 13px;
+    }
+
+    .contact {
+        margin-top: 40px;
+        padding-left: 20px;
+    }
+
+    .contact h3 {
+        padding-bottom: 20px;
+    }
+
+    .contact-info a {
+        color: #fff;
+        text-decoration: none;
+        padding-left: 25px;
+    }
+
+    .contact-info a :hover {
+        text-decoration: none;
+        color: #9e9e9e;
+    }
+
+    .contact-info span {
+        position: absolute;
+        z-index: 4;
+        color: #fff;
+    }
+
+    .Footericons {
+        padding-top: 1rem;
+    }
+
+    .Footericons a:hover {
+        color: #9e9e9e;
+    }
 }
