--- a/src/ThirdPage.css
+++ b/src/ThirdPage.css
@@ -170,6 +170,7 @@
     }
 }
 
+/* third page contents */
 .about-property {
     margin-top: 80px;
 }
@@ -194,6 +195,20 @@
     width: 510px;
     height: 350px;
     border-radius: 5px;
+}
+.mapBtn{
+    display: none;
+    margin: 10px 110px;
+}
+.mapBtn a {
+    background-color: rgb(0, 0, 255);
+    text-decoration: none;
+    color: #ffff;
+    padding: 5px 15px;
+    border-radius: 5px;
+}
+.mapBtn a:hover{
+    background-color: rgb(0, 0, 129);
 }
 
 .prop-details {
@@ -294,7 +309,7 @@
 }
 
 .brochure-btn a {
-    background-color: blue;
+    background-color: rgb(0, 0, 255);
     text-decoration: none;
     color: #ffff;
     padding: 5px 15px;
@@ -302,7 +317,7 @@
 }
 
 .brochure-btn a:hover {
-    background-color: darkblue;
+    background-color: rgb(1, 1, 132);
 }
 
 @media (max-width: 1170px){
@@ -315,6 +330,9 @@
     }    
     .property-map {
         display: none;
+    }
+    .mapBtn{
+        display: flex;
     }
     .icons {
         width: 100%
@@ -343,6 +361,69 @@
     .footer {
         height: 300px;
     }    
+}
+@media (max-width: 700px){
+    .img-map {
+        margin: 0px 40px;
+        display: block;
+    }
+    .mapBtn{
+        display: block;
+        margin: 20px 50px;
+    }
+    .prop-details {
+        margin: 10px 40px;
+        text-align: left;
+    }
+    .icons {
+        display: flex;
+        flex-wrap: wrap;
+        width: 90%
+    }
+    
+    #icon {
+        margin: 5px 40px;
+    }
+    .bhk h5 {
+        margin-left: 0px;
+    }
+    .bhk p{
+        width: 100%;       
+    }
+    .three-lines {
+        display: block;
+    }
+    .layout-img {
+        display: block;
+        width: 90%;
+        justify-content: center;
+    }
+    #status {
+        margin: 5px 20px 0px 0px;
+    }
+    .layout h5 {
+        margin-left: 15px;
+    }
+    .layout-img #img {
+        margin: 10px 0px;
+    }
+    .floor-plan h5 {
+        margin: 30px 0px 0 0px;
+    }
+    
+    .floor-img {
+        margin-left: 0px;
+        display: block;
+        width: 90%;
+    }
+    
+    .floor-img #img {
+        margin: 15px 0px;
+    }
+    
+    .brochure-btn {
+        margin: 35px 10px;
+    }
 }
 
 
@@ -463,7 +544,7 @@
 
 @media (max-width:600px) {
     .third-footer {
-        margin-top: 420vh;
+        margin-top: auto;
         position: absolute;
         background-position: bottom;
         background: linear-gradient(hsla(201, 71%, 23%, 0.8),
