--- a/src/ThirdPage.css
+++ b/src/ThirdPage.css
@@ -18,7 +18,7 @@
     z-index: 5;
 }
 
-/* @media(max-width: 768px) {
+@media(max-width: 768px) {
     .nav-wrapper {
       width: 90%;
     }
@@ -29,7 +29,7 @@
       width: 100%;
     }
   }
-   */
+  
 
 .logo {
     margin-top: -2px;
@@ -59,9 +59,9 @@
 
 .Third-Navbar ul {
     display: inline-block;
-    /* float: right; */
+    float: right;
     list-style: none;
-    /* margin-right: 14px; */
+    margin-right: 14px;
     margin-top: -2px;
     text-align: right;
     font-weight: 500px;
