--- a/src/Benefits.css
+++ b/src/Benefits.css
@@ -28,7 +28,8 @@
     text-align: center;
     font-size: 20px;
     padding: none;
-    margin-top: 5px;
+    margin-top: 15px;
+    line-height: 1.2;
 }
 @media (max-width:640px){
     .benefit{
