--- a/src/SecondPgNavFiltr.css
+++ b/src/SecondPgNavFiltr.css
@@ -288,7 +288,8 @@
   border-color: #dadada;
   width: 10% fixed;
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
+  position: fixed;
 }
 
 .areaType {
