--- a/src/Footer.css
+++ b/src/Footer.css
@@ -125,9 +125,8 @@
         color: #9e9e9e;
     }
     .copyright p{
-        background-color: rgba(255, 255, 255, 0.8);
         font-size: 15px;
-        color: #114765;
+        color: #ffff;
         padding: 7px;
     } 
 }
