--- a/src/Home.css
+++ b/src/Home.css
@@ -17,7 +17,7 @@
       background-repeat: no-repeat;
       background-size: cover;
       background-position: center;
-      background-attachment: fixed;
+      background-attachment: scroll;
     /* margin:0px ; */
     /* z-index:-1; */
 }
