--- a/src/Footer.css
+++ b/src/Footer.css
@@ -11,6 +11,7 @@
     background-repeat: no-repeat;
     background-position: bottom;
     background-attachment: fixed;
+    scroll-behavior: smooth;
 }
 .footerContent{
     color: #f4f4f4;
