--- a/src/SecondPgNavFiltr.css
+++ b/src/SecondPgNavFiltr.css
@@ -1,5 +1,4 @@
 .Sec-Navbar {
-  /* background: #18181b;; */
   background-color: #114765;
   color: black;
   position: fixed;
@@ -7,7 +6,7 @@
   height: 60px;
   line-height: 60px;
   width: 100vw;
-  z-index: 10;
+  z-index: 1;
   justify-content: baseline;
   display: flex;
 }
@@ -23,8 +22,8 @@
   width: 30px;
 }
 
-.sec-nav-wrapper a {
-  margin-left: 25px;
+.sec-nav-wrapper .logo a {
+  margin-left: 30px;
   text-decoration: none;
   color: #ffff;
 }
@@ -208,6 +207,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    margin-bottom: 0%;
   }
 
   .search-container {
@@ -229,14 +229,21 @@
 }
 
 /*---------filter heading-----------*/
-.filter-header {
+
+.filterHeading-parent {
   position: relative;
-  display: flex;
-  width: 100%;
+}
+
+.filter-header {
   flex-direction: row;
-  border-bottom: 1px ridge #dadada;
   top: 60px;
   height: 60px fixed;
+  position: fixed;
+  width: 100%;
+  z-index: 5;
+  background-color: #ffff;
+  display: flex;
+  border-bottom: 1px ridge #dadada;
 }
 
 .filter_heading h5 {
@@ -275,10 +282,14 @@
 /*---------Filer left side----------*/
 .filter_temp {
   position: relative;
-  top: 60px;
+  top: 145px;
   display: flex;
   align-items: left;
   width: 100%;
+}
+
+.left-filter-parent {
+  position: relative;
 }
 
 #left-filter {
@@ -289,6 +300,20 @@
   width: 10% fixed;
   overflow-y: scroll;
   position: fixed;
+  max-height: 100%;
+}
+
+#left-filter::-webkit-scrollbar {
+  width: 0.7em;
+}
+
+#left-filter::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+
+#left-filter::-webkit-scrollbar-thumb {
+  background-color: #114765;
+  outline: 1px solid white;
 }
 
 .areaType {
@@ -438,10 +463,12 @@ input[type="number"] {
   padding: 2px 10px;
   margin: 5px;
 }
-.bhkTypes label:hover{
+
+.bhkTypes label:hover {
   background-color: #bbbbbb;
 }
-.bhkTypes label a{
+
+.bhkTypes label a {
   text-decoration: none;
   color: rgb(53, 53, 53);
 }
@@ -547,5 +574,73 @@ input[type="number"] {
   .mob-search-container {
     display: flex;
     float: right;
+  }
+}
+
+@media (max-width: 700px) {
+
+  .mob-filter-header {
+    top: 62px;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .mob-search-container {
+    display: flex;
+    float: right;
+    margin: 2px 15px 2px 0px;
+  }
+
+  .mob-search-container input[type=text] {
+    padding: 6px;
+    margin-top: 6px;
+    margin-bottom: 5px;
+    font-size: 15px;
+    height: 30px;
+    width: 200px;
+    border-radius: 5px;
+    border: 1px solid #114765;
+  }
+
+  .mob-search-container a {
+    padding: 6px 5px;
+    margin: 6px 0px 6px 0px;
+    height: 30px;
+    border-radius: 5px;
+    background: none;
+    color: #114765;
+  }
+}
+
+.tempParent {
+  border: 2px solid red;
+  width: 80%;
+  display: grid;
+  grid: auto/ auto auto auto;
+  grid-gap: 5px;
+  margin-left: 20%;
+}
+
+@media (min-width: 1170px) and (max-width: 1290px) {
+  .tempParent {
+    border: 2px solid red;
+    width: 80%;
+    display: grid;
+    grid: auto/ auto auto auto;
+    grid-gap: 5px;
+    margin-left: 23.5%;
+  }
+}
+
+@media (max-width: 1169px) {
+  .tempParent {
+    top: 0%;
+    border: 2px solid red;
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0%;
+    align-items: center;
   }
 }
