--- a/src/AdminPortal.css
+++ b/src/AdminPortal.css
@@ -1,3 +1,10 @@
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none; 
+}
+
 .AdminHeader{
     margin: 35px;
     display: flex;
